# blueprint

./: .gitignore  CMakeLists.txt  TODO.org  build.sh  copyresources.sh
3pp/scml-pp/.svn/: wc.db
cmake_modules/: FindBoost.cmake  FindSFML.cmake
gtest/: config.status  libtool
gtest/lib/: libgtest_main.la
gtest/src/.deps/: gtest-all.Plo  gtest_main.Plo
inc/: voidworld.h
include/: libvoid.h  voids.h  voids.h.~1~
lib/: CMakeLists.txt  astar.cpp  common.h  entity.cpp  entity.h  omniview.cpp  omniview.cpp.orig  omniview.h  omniview.h.orig  resource_base.h  resources.h  scenenode.cpp  scenenode.h  statictilemap.cpp  statictilemap.h  textureholder.cpp  textureholder.h  tileloader.h  voidworld.cpp  voidworld_impl.cpp  voidworld_impl.h  worldloader.h  worldtilemap.cpp  worldtilemap.h
lib/entities/: CMakeLists.txt
lib/worldgen/: CMakeLists.txt  worldgen.cpp  worldgen.h
libvoid/: CMakeLists.txt  astar.h  common.h  libvoid.cpp  omniview.cpp  omniview.h  void.cpp  void.h
libvoid/entities/: CMakeLists.txt  entity.cpp
libvoid/worldgen/: CMakeLists.txt
resources/brainstorming/images/: .sample.gif-autosave.kra  .sample.png-autosave.kra  MainCharacter-draft1.kra
resources/sprites/tst/BasicPlatfortmerPack_Essentials/: ArtPackAgreement.html  Credits.txt
resources/sprites/tst/BasicPlatfortmerPack_Essentials/PlatformerPack/: Bonus.scml  PickUps.scml  Platformer_effects.scml  Platformer_enemies.scml  player_000.scml
resources/tilesets/: tileset1.tga  world_grid.tga
src/: CMakeLists.txt  blueprint.cpp  blueprint.h  common.h  entity.h  input.cpp  input.h  noiseutils.cpp  scenenode.cpp  scenenode.h  screen.cpp  screen.h  textureholder.h  tileloader.h  tilemap.cpp  tilemap.h  voids.cpp  voids.h  world_view.cpp  world_view.h  worldloader.cpp  worldloader.h  worldmap.cpp  worldmap.h
src/worldgen/: CMakeLists.txt  worldgen.h
ui/: UI.files  UI.includes  ui.jucer
ui/JuceLibraryCode/: AppConfig.h  JuceHeader.h
ui/Source/: Main.cpp
unittest/: CMakeLists.txt  blueprinttest.cpp
