cmake_minimum_required(VERSION 2.8)
project(blueprint)
set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -pedantic -pipe -ggdb -O0")
set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")
add_subdirectory(libvoid)
add_subdirectory(src)
add_subdirectory(unittest)
add_subdirectory(gtest)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules/")
#link_directories (/usr/lib $ENV{BLUEPRINT_ROOT}/gtest/lib)
