cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -pedantic -pipe -ggdb -O0")
set(CMAKE_CXX_FLAGS_DEBUG "-ggdb -std=c++11 -O0")
set(CMAKE_CXX_FLAGS_RELEASE "-std=c++11 -O2")

include_directories ($ENV{BLUEPRINT_ROOT}/include)
link_directories( $ENV{BLUEPRINT_ROOT}/libvoid /usr/local/lib /usr/lib )
add_library (void void.cpp omniview.cpp astar.cpp)
target_link_libraries(void noise glog)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules/")
